# Linear-Algebra

./: README.md  index.html  pyproject.toml  style.css
docs/: index.html  style.css
notebooks/: vector.ipynb
tools/: setup.py
