[tool.poetry]
name = "linear-algebra"
version = "0.1.0"
description = "Notes for Linear Algebra"
authors = ["Wittaya Tangdorn <83308832+DeliciousBoy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
